# intar-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci-e2e.yml  ci.yml  deploy-website.yml
crates/intar-agent/: Cargo.toml
crates/intar-agent/src/: main.rs  unix.rs
crates/intar-cli/: Cargo.toml  build.rs
crates/intar-cli/src/: agent.rs  commands.rs  commands_unix.rs  commands_windows.rs  main.rs
crates/intar-core/: Cargo.toml
crates/intar-core/src/: error.rs  lib.rs  scenario.rs
crates/intar-probes/: Cargo.toml
crates/intar-probes/src/: actions.rs  error.rs  eval.rs  lib.rs  protocol.rs  spec.rs
crates/intar-ui/: Cargo.toml
crates/intar-ui/src/: app.rs  colors.rs  lib.rs  widgets.rs
crates/intar-vm/: Cargo.toml
crates/intar-vm/src/: actions.rs  cloud_init.rs  dirs.rs  error.rs  host_socket.rs  image_cache.rs  lan_switch.rs  lib.rs  qemu.rs  scenario_runner.rs  serial.rs  state.rs  vm_steps.rs
scenarios/: broken-nginx.hcl  k3s-ha.hcl
scripts/: e2e-nginx.ps1  e2e-nginx.sh
