[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["icepuma"]

[workspace.dependencies]
# Async runtime
tokio = { version = "=1.48.0", features = ["full"] }

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"

# HCL parsing
hcl-rs = "=0.19.4"

# CLI
clap = { version = "=4.5.53", features = ["derive"] }

# TUI
ratatui = "=0.29.0"
crossterm = "=0.29.0"

# Regex for probes
regex = "=1.12.2"

# Error handling
thiserror = "=2.0.17"
anyhow = "=1.0.100"

# Base64 for agent embedding
base64 = "=0.22.1"

# Unix syscalls (PTY recording in guest)
nix = { version = "=0.30.1", features = ["term", "process", "fs", "poll"] }

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
tracing-appender = "=0.2.4"

# XDG directories
dirs = "=6.0.0"

# Random name generation
petname = "=2.0.2"
rand = "=0.9.2"

# HTTP client for image downloads
reqwest = { version = "=0.12.26", default-features = false, features = ["rustls-tls-webpki-roots", "stream"] }

# Kubernetes API client (guest-side probes)
kube = { version = "=2.0.1", default-features = false, features = ["rustls-tls", "ring"] }

# Kubernetes OpenAPI bindings (required by kube)
k8s-openapi = "=0.26.1"

# Checksum verification
sha2 = "=0.10.9"
hex = "=0.4.3"

# Progress indicators
indicatif = "=0.18.3"

# Async utilities
futures-util = "=0.3.31"

# Socket utilities (buffer sizes, etc.)
socket2 = "=0.6.1"

# ANSI stripping
strip-ansi-escapes = "=0.2.1"

# Internal crates
intar-core = { path = "crates/intar-core" }
intar-probes = { path = "crates/intar-probes" }
intar-agent = { path = "crates/intar-agent" }
intar-vm = { path = "crates/intar-vm" }
intar-ui = { path = "crates/intar-ui" }
