[package]
name = "intar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types, HCL parsing, and scenario models for intar"

[dependencies]
hcl-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
