[package]
name = "intar-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ratatui terminal UI for intar"

[dependencies]
intar-core.workspace = true
intar-probes.workspace = true
intar-vm.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
